# libinotify-kqueue

./: .gitignore  LICENSE  Makefile  Makefile.am  README  barriers.c  barriers.h  compat.c  compat.h  configure.ac  controller.c  conversions.c  conversions.h  dep-list.c  dep-list.h  event-queue.c  event-queue.h  inotify-test.c  inotify-watch.c  inotify-watch.h  inotify.h  kqueue-test.c  libinotify.3  libinotify.pc.in  libinotify.sym  test.c  utils.c  utils.h  watch-set.c  watch-set.h  watch.c  watch.h  worker-sets.c  worker-sets.h  worker-thread.c  worker-thread.h  worker.c  worker.h
compat/: atfuncs.c  compat.c  fdclosedir.c  fdopendir.c  fstatat.c  ik_atomic.c  ik_atomic.h  openat.c  pthread_barrier.c  stdatomic.h  tree.h
patches/: freebsd11-NOTE_EXTEND-onrename.patch  freebsd11-NOTE_OPEN-NOTE_CLOSE-NOTE_READ.patch  freebsd11-NOTE_REVOKE.patch  freebsd11-O_SYMLINK.patch
sys/: inotify.h
tests/: Makefile  bugs_test.cc  bugs_test.hh  event_queue_test.cc  event_queue_test.hh  fail_test.cc  fail_test.hh  notifications_dir_test.cc  notifications_dir_test.hh  notifications_test.cc  notifications_test.hh  open_close_test.cc  open_close_test.hh  start_stop_dir_test.cc  start_stop_dir_test.hh  start_stop_test.cc  start_stop_test.hh  symlink_test.cc  symlink_test.hh  tests.cc  update_flags_dir_test.cc  update_flags_dir_test.hh  update_flags_test.cc  update_flags_test.hh
tests/core/: action.cc  action.hh  consumer.cc  consumer.hh  core.hh  event.cc  event.hh  inotify_client.cc  inotify_client.hh  journal.cc  journal.hh  log.cc  log.hh  platform.hh  request.cc  request.hh  response.cc  response.hh  test.cc  test.hh
